works overflow correct

--- a/style.css
+++ b/style.css
@@ -165,3 +165,11 @@ section {
 
 
 /* about */
+
+
+/*works*/
+
+#workscont {
+    display: block;
+    overflow-y: scroll;
+}
